--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,40 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+    <button ion-button menuToggle>
+      <img src="assets/logobtn.png" style=" width: 35px; ">
+    </button>
+    <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+
+  <ion-list>
+    <ion-list-header>
+      List of users
+    </ion-list-header>
+
+    <ion-item-sliding *ngFor="let r of register ">
+      <ion-item>
+        <ion-avatar item-start>
+          <img src="https://www.shareicon.net/download/2016/09/01/822711_user_512x512.png">
+        </ion-avatar>
+        <h2>{{r.userName}}</h2>
+        <p>{{r.email}}</p>
+      </ion-item>
+      <ion-item-options>
+
+        <button ion-button color="primary" icon-start (click)="showPrompt(r)">
+          <ion-icon name="create"></ion-icon>
+
+        </button>
+        <button ion-button color="secondary" icon-start (click)="onDelete(r.email)">
+          <ion-icon name="trash"></ion-icon>
+
+        </button>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
+
 </ion-content>
