add matiere page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,7 +12,7 @@
 
   <ion-list>
     <ion-list-header>
-      List of users
+      Liste des utilisateurs
     </ion-list-header>
 
     <ion-item-sliding *ngFor="let r of register ">
