--- a/src/pages/departement/departement.html
+++ b/src/pages/departement/departement.html
@@ -1,27 +1,37 @@
+<!--
+  Generated template for the DepartementPage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
       <img src="assets/imgs/menubtn.png" style=" width: 35px; ">
     </button>
-    <ion-searchbar (ionInput)="getItems($event)" ></ion-searchbar>
+    <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
   </ion-navbar>
 </ion-header>
 
+
 <ion-content padding>
 
-<h1 class="myTitle">Liste des utilisateurs</h1>
+  <h1 class="myTitle"> Liste des departements</h1>
   <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content>
+
+
     </ion-refresher-content>
   </ion-refresher>
+
   <ion-list>
-    <ion-item-sliding *ngFor="let r of register ">
+
+    <ion-item-sliding *ngFor="let r of departement ">
       <ion-item>
         <ion-avatar item-start>
           <img src="https://www.shareicon.net/download/2016/09/01/822711_user_512x512.png">
         </ion-avatar>
-        <h2>{{r.userName}}</h2>
-        <p>{{r.email}}</p>
+        <h2>{{r.nom}}</h2>
       </ion-item>
       <ion-item-options>
 
@@ -29,7 +39,7 @@
           <ion-icon name="create"></ion-icon>
 
         </button>
-        <button ion-button color="secondary" icon-start (click)="onDelete(r.email)">
+        <button ion-button color="secondary" icon-start (click)="onDelete(r.id)">
           <ion-icon name="trash"></ion-icon>
 
         </button>
@@ -37,4 +47,9 @@
     </ion-item-sliding>
   </ion-list>
 
+  <ion-fab right bottom>
+    <button ion-fab color="danger" (click)="showPromptAdd()">
+      <ion-icon name="add"></ion-icon>
+    </button>
+  </ion-fab>
 </ion-content>
