add enseignement views

--- a/src/pages/agent-accueil/agent-accueil.html
+++ b/src/pages/agent-accueil/agent-accueil.html
@@ -27,7 +27,7 @@
     </ion-refresher-content>
   </ion-refresher>
 
-  <ion-list>
+  <ion-list #item>
 
     <!-- <ion-item-sliding *ngFor="let r of enseignement ">-->
     <div *ngFor="let r of enseignement ">
