--- a/src/pages/departement/departement.html
+++ b/src/pages/departement/departement.html
@@ -24,24 +24,24 @@
     </ion-refresher-content>
   </ion-refresher>
 
-  <ion-list>
+  <ion-list #item>
 
     <ion-item-sliding *ngFor="let r of departement ">
       <ion-item>
         <ion-avatar item-start>
-          <img src="https://www.shareicon.net/download/2016/09/01/822711_user_512x512.png">
+          <img src="http://ww1.prweb.com/prfiles/2012/02/05/14222665/bg_house.png">
         </ion-avatar>
         <h2>{{r.nom}}</h2>
       </ion-item>
       <ion-item-options>
 
-        <button ion-button color="primary" icon-start (click)="showPrompt(r)">
+        <button ion-button color="primary" icon-start (click)="showPrompt(r)" class="editBtn">
           <ion-icon name="create"></ion-icon>
-
+          <p>Edit</p>
         </button>
-        <button ion-button color="secondary" icon-start (click)="onDelete(r.id)">
+        <button ion-button color="secondary" icon-start (click)="onDelete(r.id)"  class="deleteBtn">
           <ion-icon name="trash"></ion-icon>
-
+          <p>Delete</p>
         </button>
       </ion-item-options>
     </ion-item-sliding>
