--- a/src/pages/enseignant/enseignant.html
+++ b/src/pages/enseignant/enseignant.html
@@ -16,22 +16,22 @@
   </ion-refresher>
   <ion-list>
     <ion-item-sliding *ngFor="let r of enseignant ">
-      <ion-item>
+      <ion-item #item>
         <ion-avatar item-start>
-          <img src="https://www.shareicon.net/download/2016/09/01/822711_user_512x512.png">
+          <img src="http://www.pngmart.com/files/5/Teacher-PNG-Transparent.png">
         </ion-avatar>
         <h2>{{r.nom}}</h2>
         <p>{{r.email}}</p>
       </ion-item>
       <ion-item-options>
 
-        <button ion-button color="primary" icon-start (click)="showPrompt(r)">
+        <button ion-button color="primary" icon-start (click)="showPrompt(r)" class="editBtn">
           <ion-icon name="create"></ion-icon>
-
+          <p>Edit</p>
         </button>
-        <button ion-button color="secondary" icon-start (click)="onDelete(r.id)">
+        <button ion-button color="secondary" icon-start (click)="onDelete(r.id)"  class="deleteBtn">
           <ion-icon name="trash"></ion-icon>
-
+          <p>Delete</p>
         </button>
       </ion-item-options>
     </ion-item-sliding>
