--- a/src/pages/salle/salle.html
+++ b/src/pages/salle/salle.html
@@ -20,7 +20,7 @@
     <ion-refresher-content>
     </ion-refresher-content>
   </ion-refresher>
-  <ion-list>
+  <ion-list #item>
 
 
     <ion-item-sliding *ngFor="let r of salle ">
@@ -32,13 +32,13 @@
       </ion-item>
       <ion-item-options>
 
-        <button ion-button color="primary" icon-start (click)="showPrompt(r)">
+        <button ion-button color="primary" icon-start (click)="showPrompt(r)" class="editBtn">
           <ion-icon name="create"></ion-icon>
-
+          <p>Edit</p>
         </button>
-        <button ion-button color="secondary" icon-start (click)="onDelete(r.id)">
+        <button ion-button color="secondary" icon-start (click)="onDelete(r.id)"  class="deleteBtn">
           <ion-icon name="trash"></ion-icon>
-
+          <p>Delete</p>
         </button>
       </ion-item-options>
     </ion-item-sliding>
