add menu icon and enable swipe back

--- a/src/pages/sign-up/sign-up.html
+++ b/src/pages/sign-up/sign-up.html
@@ -40,7 +40,7 @@
             <ion-datetime displayFormat="DD/MM/YYYY" [(ngModel)]="dateNaissance" name="dateNaissance"></ion-datetime>
           </ion-item>
           <br>
-          <button ion-button type="submit" block round outline>Sign Up</button>
+          <button ion-button type="submit" block  outline>Sign Up</button>
         </form>
       </ion-list>
   </div>
