--- a/src/pages/departement/departement.html
+++ b/src/pages/departement/departement.html
@@ -24,7 +24,7 @@
     </ion-refresher-content>
   </ion-refresher>
 
-  <ion-list #item>
+  <ion-list class="animated fadeInLeft">
 
     <ion-item-sliding *ngFor="let r of departement ">
       <ion-item>
