--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,7 +14,7 @@
     <ion-refresher-content>
     </ion-refresher-content>
   </ion-refresher>
-  <ion-list #item>
+  <ion-list class="animated fadeInLeft">
     <ion-item-sliding *ngFor="let r of register " >
       <ion-item >
         <ion-avatar item-start>
