--- a/src/pages/salle/salle.html
+++ b/src/pages/salle/salle.html
@@ -7,7 +7,7 @@
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
-      <img src="assets/logobtn.png" style=" width: 35px; ">
+      <img src="assets/imgs/menubtn.png" style=" width: 35px; ">
     </button>
     <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
   </ion-navbar>
@@ -20,7 +20,7 @@
     <ion-refresher-content>
     </ion-refresher-content>
   </ion-refresher>
-  <ion-list #item>
+  <ion-list class="animated fadeInLeft">
 
 
     <ion-item-sliding *ngFor="let r of salle ">
