--- a/src/pages/enseignant/enseignant.html
+++ b/src/pages/enseignant/enseignant.html
@@ -14,9 +14,9 @@
     <ion-refresher-content>
     </ion-refresher-content>
   </ion-refresher>
-  <ion-list>
+  <ion-list class="animated fadeInLeft">
     <ion-item-sliding *ngFor="let r of enseignant ">
-      <ion-item #item>
+      <ion-item>
         <ion-avatar item-start>
           <img src="http://www.pngmart.com/files/5/Teacher-PNG-Transparent.png">
         </ion-avatar>
@@ -33,6 +33,12 @@
           <ion-icon name="trash"></ion-icon>
           <p>Delete</p>
         </button>
+        <a href="tel:{{r.telephone}}" style=" text-decoration: none; ">
+        <button ion-button color="secondary" icon-start class="callBtn">
+          <ion-icon name="call"></ion-icon>
+          <p>Call</p>
+        </button>
+        </a>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
