--- a/src/pages/enseignement/enseignement.html
+++ b/src/pages/enseignement/enseignement.html
@@ -18,7 +18,7 @@
     </ion-refresher-content>
   </ion-refresher>
 
-  <ion-list #item>
+  <ion-list class="animated fadeInLeft">
 
     <ion-item-sliding *ngFor="let r of enseignement ">
       <ion-item>
